apps/f1-predictor/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f1-predictor
spec:
  template:
    spec:
      containers:
      - name: f1-predictor
