apps/f1-predictor/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: f1-predictor-ingress-subdomain
  namespace: f1-predictor-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    external-dns.alpha.kubernetes.io/hostname: f1.brettswift.com
    external-dns.alpha.kubernetes.io/target: 68.147.109.77
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - f1.brettswift.com
    secretName: home-brettswift-com-tls
  rules:
  - host: f1.brettswift.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: f1-predictor
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: f1-predictor-ingress-path
  namespace: f1-predictor-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - home.brettswift.com
    secretName: home-brettswift-com-tls
  rules:
  - host: home.brettswift.com
    http:
      paths:
      - path: /f1-predictor(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: f1-predictor
            port:
              number: 80
